--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,8 +1,19 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
+.header li{
+  display:inline;
+}
+
+.left-links {
+  justify-content: left;
+}
 .logo {
   font-size: 48px;
   font-weight: 900;
@@ -14,6 +25,7 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  padding: 10px;
 }
 
 a {
