--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,21 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding-left: 8px;
+  padding-right: 8px;
+}
+
+.header li{
+  display: inline;
+  padding-right: 16px;
+}
+
+.left, .right {
+  display: flex;
+  align-items: center;
 }
 
 .profile-image {
@@ -20,6 +35,7 @@ body {
   border-radius: 50%;
   width: 48px;
   height:  48px;
+  margin-left: 16px;
 }
 
 .logo {
